<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    	<ImageView 
    		android:src="@drawable/icon" 
    		android:layout_weight="1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
    		/>
	    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:padding="10dip"
	    >
	    	<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:textSize="25dip"
	    		android:text="@string/app_name"/>
	    	<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:textSize="15dip"
	    		android:text="@string/aboutAuthor"/>
    		<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:textSize="12dip"
	    		android:text="@string/aboutSummary"/>
	    </LinearLayout>
    </LinearLayout>
   
</LinearLayout>
